Add mongoose and remove file irrelevant

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGOOSE_URL=mongodb+srv://thomas:0914267321@thomas-travel-ozpsf.mongodb.net/test?retryWrites=true&w=majority
+MONGOOSE_URL=mongodb+srv://thomas:0914267326nguyen...@thefrog.81t3z.mongodb.net/shops?retryWrites=true&w=majority
