--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.21",
-    "nodemon": "^2.0.4",
-    "sequelize": "^6.3.3"
+    "nodemon": "^2.0.4"
   }
 }
