--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 MONGOOSE_URL=mongodb+srv://thomas:0914267326nguyen...@thefrog.81t3z.mongodb.net/shops?retryWrites=true&w=majority
+MAILGUN_APIKEY=b56ba5aa77beab72fe674a1a0a37a190-a65173b1-0b1ca25b
+JWT_ACC_ACTIVATE=accountofthomasedis0372924454
+CLIENT_URL = http://localhost:5000
