--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 MONGOOSE_URL=mongodb+srv://thomas:0914267326nguyen...@thefrog.81t3z.mongodb.net/shops?retryWrites=true&w=majority
-MAILGUN_APIKEY=b56ba5aa77beab72fe674a1a0a37a190-a65173b1-0b1ca25b
 JWT_ACC_ACTIVATE=accountofthomasedis0372924454
-CLIENT_URL = http://localhost:5000
+CLIENT_URL = https://api-the-frog.herokuapp.com
+NODEMAILER_EMAIL = 'thefrog.vn@gmail.com'
+NODEMAILER_EMAIL_PASSWORD = '0372924454nguyen...'
