--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 MONGOOSE_URL=mongodb+srv://thomas:0914267326nguyen...@thefrog.81t3z.mongodb.net/shops?retryWrites=true&w=majority
+MONGOOSE_URL2 = mongodb://localhost:27017/TheFrog
 JWT_ACC_ACTIVATE=accountofthomasedis0372924454
 CLIENT_URL = https://api-the-frog.herokuapp.com
 NODEMAILER_EMAIL = 'thefrog.vn@gmail.com'
